// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tokens /> Renders loading screen 1`] = `
<MemoryRouter>
  <CompatRouter>
    <Tokens
      setOfflineToken={[Function]}
      show={true}
    />
  </CompatRouter>
</MemoryRouter>
`;

exports[`<Tokens /> Renders screen with button 1`] = `
<MemoryRouter>
  <CompatRouter>
    <Tokens
      setOfflineToken={[Function]}
      show={false}
      showPath="/token/show"
    />
  </CompatRouter>
</MemoryRouter>
`;

exports[`<Tokens /> Renders screen with token 1`] = `
<MemoryRouter>
  <CompatRouter>
    <Tokens
      offlineToken="test-token"
      setOfflineToken={[Function]}
      show={false}
      showPath="/token/show"
    />
  </CompatRouter>
</MemoryRouter>
`;

exports[`<Tokens /> Renders token 1`] = `
<MemoryRouter>
  <CompatRouter>
    <Tokens
      setOfflineToken={[Function]}
      show={true}
    />
  </CompatRouter>
</MemoryRouter>
`;
